--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 22 14:14:19 GMT 2017
+#Wed Apr 12 13:16:31 BST 2017
 ndk.dir=C\:\\Users\\micha\\AppData\\Local\\Android\\Sdk\\ndk-bundle
 sdk.dir=C\:\\Users\\micha\\AppData\\Local\\Android\\Sdk
